loopfor.LoopFor.scala.code
for (i <- 1 to ) {
  porteBiscuit()
}
